WP6SAP: Updating README.md ready for Github release.